--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-foreach(TARGET transformer debug)
+foreach(TARGET transformer-train debug)
   ADD_EXECUTABLE(${TARGET} ${TARGET}.cc)
   SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/")
   if(UNIX AND NOT APPLE)
