--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,10 +28,10 @@ foreach(TARGET transformer-train transformer-decode transformer-lm)
 #	  target_link_libraries(${TARGET} dynet ${LIBS})
 #  endif (WITH_CUDA_BACKEND)
   if (WITH_CUDA_BACKEND)
-    target_link_libraries(${TARGET} gdynet ${LIBS})
+    target_link_libraries(${TARGET} gdynet mteval ${LIBS})
     CUDA_ADD_CUBLAS_TO_TARGET(${TARGET})
   else()
-    target_link_libraries(${TARGET} dynet ${LIBS})
+    target_link_libraries(${TARGET} dynet mteval ${LIBS})
   endif (WITH_CUDA_BACKEND)
   if(UNIX AND NOT APPLE)
     target_link_libraries(${TARGET} rt)
