[WIP] - add initial code for round tripping w/ transformer models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,4 +188,5 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_subdirectory(dynet/dynet)
 add_subdirectory(third_party/mteval)
 add_subdirectory(src)
+add_subdirectory(src/research)
 enable_testing()
